; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_windfarm_max6690_sensor.c_wf_max6690_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_windfarm_max6690_sensor.c_wf_max6690_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.wf_6690_sensor = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @wf_max6690_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wf_max6690_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.wf_6690_sensor*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.wf_6690_sensor* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.wf_6690_sensor* %5, %struct.wf_6690_sensor** %3, align 8
  %6 = load %struct.wf_6690_sensor*, %struct.wf_6690_sensor** %3, align 8
  %7 = getelementptr inbounds %struct.wf_6690_sensor, %struct.wf_6690_sensor* %6, i32 0, i32 1
  store i32* null, i32** %7, align 8
  %8 = load %struct.wf_6690_sensor*, %struct.wf_6690_sensor** %3, align 8
  %9 = getelementptr inbounds %struct.wf_6690_sensor, %struct.wf_6690_sensor* %8, i32 0, i32 0
  %10 = call i32 @wf_unregister_sensor(i32* %9)
  ret i32 0
}

declare dso_local %struct.wf_6690_sensor* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @wf_unregister_sensor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
